updated dl-jupyter.Dockerfile and added ML/AI libraries to dockerfile

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-tensorflow
+chainer
+dm-sonnet
+fastai
 jupyter
+keras
+lightgbm
+matplotlib
 numpy
 pandas
-matplotlib
-keras
+scikit-learn
+tensorflow
+theano
+torch
+vowpalwabbit
+xgboost
