--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,41 @@
 version: "3.8"
 services:
-    tensorboard:
-        image: dl-monitoring
+    jupyter-server:
+        image: dl-jupyter
+        init: true
         build:
             context: ./
-            dockerfile: monitoring.Dockerfile
+            dockerfile: dl-jupyter.Dockerfile
+        env_file: ./.env
+        ports:
+            - ${JUPYTER_PORT}:${JUPYTER_PORT}
+        volumes:
+            - ${ROOT_DIR}:/jupyter
+        environment:
+            - NVIDIA_VISIBLE_DEVICES=all
+        command:
+            [
+                "jupyter",
+                "notebook",
+                "--ip=*",
+                "--port=${JUPYTER_PORT}",
+                "--allow-root",
+                "--notebook-dir=${JUPYTER_DIR}",
+                '--NotebookApp.token=${JUPYTER_TOKEN}'
+            ]
+        deploy:
+            resources:
+                reservations:
+                    devices:
+                        - driver: nvidia
+                          count: all
+                          capabilities: ["gpu"]
+
+    tensorboard:
+        image: dl-tensorboard
+        build:
+            context: ./
+            dockerfile: tensorboard.Dockerfile
         ports:
             - ${TENSORBOARD_PORT}:${TENSORBOARD_PORT}
         volumes:
@@ -15,29 +46,4 @@ services:
                 "--logdir=${TENSORBOARD_DIR}",
                 "--port=${TENSORBOARD_PORT}",
                 "--bind_all",
-            ]
-
-    jupyter-server:
-        image: dl-jupyter
-        init: true
-        build:
-            context: ./
-            dockerfile: dl-jupyter.Dockerfile
-        device_requests:
-            - capabilities:
-                - "gpu"
-        env_file: ./.env
-        ports:
-            - ${JUPYTER_PORT}:${JUPYTER_PORT}
-        volumes:
-            - ${ROOT_DIR}:/jupyter
-        command:
-            [
-                "jupyter",
-                "notebook",
-                "--ip=*",
-                "--port=${JUPYTER_PORT}",
-                "--allow-root",
-                "--notebook-dir=${JUPYTER_DIR}",
-                '--NotebookApp.token=${JUPYTER_TOKEN}'
             ]
