Added miniconda docker image and updated requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+albumentations
+black
+black[jupyter]
 catalyst
+dask[complete]
 einops
 jax
 jaxlib
 jupyterlab
+kaggle
 matplotlib
 numba
 numpy
 onnx
+opencv-contrib-python
 optuna
 pandas
 ray
