--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,191 @@
-albumentations
-black
-black[jupyter]
-catalyst
-dask[complete]
-einops
-jax
-jaxlib
-jupyterlab
-kaggle
-matplotlib
-numba
-numpy
-onnx
-opencv-contrib-python
-optuna
-pandas
-ray
-scikit-learn
-sympy
-tensorflow
-torch
-torchvision
-tqdm
-transformers
-vowpalwabbit
-wandb
-xgboost
+absl-py==0.13.0
+albumentations==1.1.0
+alembic==1.7.1
+anyio==3.3.0
+argon2-cffi==21.1.0
+astunparse==1.6.3
+attrs==21.2.0
+autopage==0.4.0
+Babel==2.9.1
+backcall==0.2.0
+black==21.9b0
+bleach==4.1.0
+bokeh==2.4.0
+cachetools==4.2.2
+catalyst==21.8
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
+clang==5.0
+click==8.0.1
+cliff==3.9.0
+cloudpickle==2.0.0
+cmaes==0.8.2
+cmd2==2.1.2
+colorama==0.4.4
+colorlog==6.4.1
+configparser==5.0.2
+cycler==0.10.0
+dask==2021.9.1
+debugpy==1.4.1
+decorator==5.0.9
+defusedxml==0.7.1
+distributed==2021.9.1
+docker-pycreds==0.4.0
+einops==0.3.2
+entrypoints==0.3
+filelock==3.0.12
+flatbuffers==1.12
+fsspec==2021.10.0
+gast==0.4.0
+gitdb==4.0.7
+GitPython==3.1.18
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+greenlet==1.1.1
+grpcio==1.39.0
+h5py==3.1.0
+HeapDict==1.0.1
+huggingface-hub==0.0.16
+hydra-slayer==0.1.1
+idna==3.2
+imageio==2.9.0
+ipykernel==6.3.1
+ipython==7.27.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.4
+jax==0.2.19
+jaxlib==0.1.71
+jedi==0.18.0
+Jinja2==3.0.1
+joblib==1.0.1
+json5==0.9.6
+jsonschema==3.2.0
+jupyter-client==7.0.2
+jupyter-core==4.7.1
+jupyter-server==1.10.2
+jupyterlab==3.1.10
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.7.2
+jupyterlab-widgets==1.0.1
+kaggle==1.5.12
+keras==2.6.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+llvmlite==0.37.0
+locket==0.2.1
+Mako==1.1.5
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+matplotlib-inline==0.1.2
+mistune==0.8.4
+mpmath==1.2.1
+msgpack==1.0.2
+mypy-extensions==0.4.3
+nbclassic==0.3.1
+nbclient==0.5.4
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.6.3
+notebook==6.4.3
+numba==0.54.0
+numpy==1.19.5
+oauthlib==3.1.1
+onnx==1.10.1
+opencv-contrib-python==4.5.3.56
+opencv-python-headless==4.5.3.56
+opt-einsum==3.3.0
+optuna==2.9.1
+packaging==21.0
+pandas==1.3.2
+pandocfilters==1.4.3
+parso==0.8.2
+partd==1.2.0
+pathspec==0.9.0
+pathtools==0.1.2
+pbr==5.6.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.3.1
+platformdirs==2.4.0
+prettytable==2.2.0
+prometheus-client==0.11.0
+promise==2.3
+prompt-toolkit==3.0.20
+protobuf==3.17.3
+psutil==5.8.0
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.10.0
+pyparsing==2.4.7
+pyperclip==1.8.2
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+python-slugify==5.0.2
+pytz==2021.1
+PyWavelets==1.1.1
+PyYAML==5.4.1
+pyzmq==22.2.1
+qudida==0.0.4
+ray==1.6.0
+redis==3.5.3
+regex==2021.8.28
+requests==2.26.0
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+rsa==4.7.2
+sacremoses==0.0.45
+scikit-image==0.18.3
+scikit-learn==0.24.2
+scipy==1.7.1
+Send2Trash==1.8.0
+sentry-sdk==1.3.1
+shortuuid==1.0.1
+six==1.15.0
+smmap==4.0.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+SQLAlchemy==1.4.23
+stevedore==3.4.0
+subprocess32==3.5.4
+sympy==1.8
+tblib==1.7.0
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorboardX==2.2
+tensorflow==2.6.0
+tensorflow-estimator==2.6.0
+termcolor==1.1.0
+terminado==0.11.1
+testpath==0.5.0
+text-unidecode==1.3
+threadpoolctl==2.2.0
+tifffile==2021.8.30
+tokenize-rt==4.1.0
+tokenizers==0.10.3
+tomli==1.2.1
+toolz==0.11.1
+torch==1.9.0
+torchvision==0.10.0
+tornado==6.1
+tqdm==4.62.2
+traitlets==5.1.0
+transformers==4.10.0
+typing-extensions==3.10.0.2
+urllib3==1.26.6
+vowpalwabbit==8.11.0
+wandb==0.12.1
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.2.1
+Werkzeug==2.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+xgboost==1.4.2
+zict==2.0.0
